--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-release/cgminer-dr1-pi.zip
-release/cgminer-dr1-ubuntu32.zip
-release/cgminer-dr1-ubuntu64.zip
-release/cgminer-dr1-win.zip
+release-*/cgminer-dr1-pi.zip
+release-*/cgminer-dr1-ubuntu32.zip
+release-*/cgminer-dr1-ubuntu64.zip
+release-*/cgminer-dr1-win.zip
